2012-03-20 Erwin Waterlander <waterlan@xs4all.nl>
	* Support conversion of Unicode UTF-16 encoded files.

2012-03-16 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Make it compile on Cygwin 1.5.

2012-03-10 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 5.3.3
	* Makefile: Binary packages with native language support
	  get "-nls" suffix.

2012-03-08 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Option -V prints target OS on DOS/Windows/OS2.

2012-03-07 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c, unix2dos.c, mingw64.mak: Enabled wildcard
	  expansion for Win64 (MinGW-w64). Thanks to Steve Hay.
	* wccdos16.mak: Enabled wildcard expansion.
	* wccdos32.mak: Enabled wildcard expansion.
	* wccwin32.mak: Enabled wildcard expansion.
	* bcc.mak: Enabled wildcard expansion.

2012-03-02 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: New target 'mostlyclean' that preserves the manual
	  files. Target 'clean' removes all built files, it restores the
	  Unix source package to its original state.
	* Makefile: New variable HTMLEXT to override the default 'htm'
	  extension for the manual in HTML format.

2012-02-01 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile, version.mk: Fix a compile error when debug
	  is enabled. Thanks to Maurizio Camisaschi and Lars Wendler.
	  See https://bugs.gentoo.org/400769
	* Makefile: Enable debugging info for gdb when DEBUG=1
	* man page: Small update in section RETURN VALUE.

2012-01-27 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 5.3.2

2012-01-02 Erwin Waterlander <waterlan@xs4all.nl>
	* os2.mak: Enable support for wild cards (-Zargs-wild).
	  Thanks to Steven H. Levine and Elbert Pol.

2011-12-20 Erwin Waterlander <waterlan@xs4all.nl>
	* querycp.c: Extra comment from Rugxulo.
	* querycp.c: Undid change of 2011-11-12. MSYS version
	  behaves as Cygwin version.

2011-12-15 Erwin Waterlander <waterlan@xs4all.nl>
	* wccdos32.mak: New makefile for Open Watcom for DOS32.
