@@ -169,6 +169,7 @@ In Mac mode Unix line breaks are changed to two Mac line breaks.
 =item B<-m, --add-bom>
 
 Write an UTF-8 Byte Order Mark in the output file.
+See also section UNICODE.
 
 =item B<-n, --newfile INFILE OUTFILE ...>
 
@@ -275,10 +276,6 @@ Convert from Windows CP1252 to Unix UTF-8 (Unicode)
 
     iconv -f CP1252 -t UTF-8 in.txt | dos2unix > out.txt
 
-Convert from Windows UTF-16 (Unicode) to Unix UTF-8 (Unicode)
-
-    iconv -f UTF-16 -t UTF-8 in.txt | dos2unix > out.txt
-
 Convert from Unix Latin-1 to DOS default code page.
 
     unix2dos -iso -n in.txt out.txt
@@ -295,10 +292,6 @@ Convert from Unix UTF-8 (Unicode) to Windows CP1252
 
     unix2dos < in.txt | iconv -f UTF-8 -t CP1252 > out.txt
 
-Convert from Unix UTF-8 (Unicode) to Windows UTF-16 (Unicode)
-
-    unix2dos < in.txt | iconv -f UTF-8 -t UTF-16 > out.txt
-
 See also L<http://czyborra.com/charsets/codepages.html>
 and L<http://czyborra.com/charsets/iso8859.html>.
 
@@ -308,35 +301,63 @@ and L<http://czyborra.com/charsets/iso8859.html>.
 
 =head2 Encodings
 
-There exist different Unicode encodings. On Unix/Linux Unicode files are
+There exist different Unicode encodings. On Unix and Linux Unicode files are
 typically encoded in UTF-8 encoding. On Windows Unicode text files can be
-encoded in UTF-8, UTF-16, or UTF-16 big endian, but are mostly encoded in
+encoded in UTF-8, UTF-16, or UTF-16 big endian, but are commonly encoded in
 UTF-16 format.
 
 =head2 Conversion
 
-Unicode text files can have DOS, Unix or Mac line breaks, like 8-bit text
+Unicode text files can have DOS, Unix or Mac line breaks, like regular text
 files.
 
-All versions of dos2unix/unix2dos can convert UTF-8 encoded files.  When
-dos2unix/unix2dos was built with Unicode support, it can convert also UTF-16
+All versions of dos2unix/unix2dos can convert UTF-8 encoded files, because
+UTF-8 was designed for backward compatiblity with ASCII.
+
+Dos2unix/unix2dos with Unicode support, can convert also UTF-16
 encoded text files. To see if dos2unix was built with Unicode support type
 C<dos2unix -V>.
 
-The Windows versions of dos2unix/unix2dos will convert UTF-16 files always to
-UTF-8 files. Unix versions of dos2unix/unix2dos convert UTF-16 files to the
-locale encoding.
+The Windows versions of dos2unix/unix2dos will convert UTF-16 encoded files
+always to UTF-8 encoded files. Unix versions of dos2unix/unix2dos convert
+UTF-16 encoded files to the locale encoding.
 
 =head2 Byte Order Mark
 
 On Windows Unicode text files typically have a Byte Order Mark (BOM),
 see also L<http://en.wikipedia.org/wiki/Byte_order_mark>.
+
 On Unix Unicode files typically don't have a BOM.
+
+Dos2unix can only detect if a file is in UTF-16 format if the file has a BOM.
+When an UTF-16 file doesn't have a BOM, dos2unix will see the file as a binary
+file.
+
+To convert an UTF-16 file without BOM, you can use dos2unix in combination with
+iconv(1).
 
 Dos2unix never writes a BOM in the output file, unless you use option C<-m>.
 
 Unix2dos writes a BOM in the output file when the input file has a BOM, or
 when option C<-m> is used.
+
+=head2 Unicode examples
+
+Convert from Windows UTF-16 (with BOM) to Unix UTF-8
+
+    dos2unix -n in.txt out.txt
+
+Convert from Windows UTF-16 (without BOM) to Unix UTF-8
+
+    iconv -f UTF-16 -t UTF-8 in.txt | dos2unix > out.txt
+
+Convert from Unix UTF-8 to Windows UTF-8
+
+    unix2dos -m -n in.txt out.txt
+
+Convert from Unix UTF-8 to Windows UTF-16
+
+    unix2dos < in.txt | iconv -f UTF-8 -t UTF-16 > out.txt
 
 =head1 EXAMPLES
 
