@@ -1,4 +1,4 @@
-DOS2UNIX_VERSION = 6.0-beta1
-DOS2UNIX_VERSION_SHORT = 60b1
-DOS2UNIX_DATE = 2012-03-20
+DOS2UNIX_VERSION = 6.0-beta2
+DOS2UNIX_VERSION_SHORT = 60b2
+DOS2UNIX_DATE = 2012-03-21
 DOS2UNIX_AUTHOR = 'Erwin Waterlander'
